--- a/public/Css/nav.css
+++ b/public/Css/nav.css
@@ -3,6 +3,8 @@ nav {
     background-color: var(--color-blue-1);
     box-shadow: 0px 0px 10px 3px #00000044;
     background: linear-gradient(90deg, #187bcd, #52bcfa, #187bcd);
+    position: relative;
+    z-index: 11;
 }
 
 .logo {
