--- a/public/Page/dashboard/style.css
+++ b/public/Page/dashboard/style.css
@@ -57,16 +57,17 @@ td.btn{
     border: 1px solid rgb(150, 124, 124);
 }
 
-table td button{
+table td a,table td button{
     outline: none;
-    border:none;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
     background-color: var(--color-blue-1);
     color: var(--color-white-1);
     padding: 1rem 2rem;
     border-radius: 0.5rem;
     font-size: 1.5rem;
     font-weight: 600;
-    cursor: pointer;
 }
 
 caption{
